--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- ===== STYLE.CSS ===== -->
+    <link rel="stylesheet" href="./css/style.css" />
+    <!-- ===== REMIXICON CDN ===== -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <title>Responsive Product Landing Page</title>
 </head>
 <body>
+    <!-- === OVERLAY === -->
+    <div class="overlay first"></div>
+    <div class="overlay second"></div>
+    <div class="overlay thrid"></div>
+
+    <!-- === CONTAIINER === -->
+    <div class="left_container"></div>
+    <div class="right_container"></div>
     
+    <!-- === STRIPS === -->
+    <div class="strips">
+        <div class="left_strip"></div>
+        <div class="right_strip"></div>
+    </div>
+
+    <!-- === NAVBAR === -->
+    <header>
+        <nav class="nav body_layout">
+            <div class="nav_insider">
+                <div class="logo">
+                    <h3 class="nav__icon">levi's <sup>&reg;</sup></h3>
+                </div>
+            </div>
+        </nav>
+            <div class="nav__menu" id="nav__menu">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#" class="nav__link">man</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">women</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">kids</a></li>
+                <li class="nav__item search_btn">
+                <button class="search_btn">
+                    <i class="ri-search-line"></i>
+                </button>
+                </li>
+            </ul>
+            </div>
+    </header>
 </body>
 </html>
